[package]
name = "gpx_tool"
version = "0.1.0"
authors = ["Nic0w <nico.broquet@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "~2.33.3"
serde = { version = "1.0", features = [ "derive" ] }
quick-xml = { version = "0.20", features = [ "serialize" ] }
simple_xml_serialize = "0.2.3"
simple_xml_serialize_macro = "0.2.1"
